1999-04-20  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/icons.c (DeIconify):
	* fvwm/focus.c (FocusOn):
	(flip_focus_func):
	(focus_func):
	(SetFocus):
	(DoSetFocus): Focus and FlipFocus commands take 'NoWarp' as parameter
	to prevent warping to the desk/page the window is on

1999-04-19  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/icons.c (AutoPlaceIcon):
	Use IsWindowOnThisPage. This fixes the problem that the icon may be on
	a different page even if you iconified something on the current page

	* fvwm/misc.h:
	* fvwm/builtins.c (Maximize):
	* fvwm/focus.c (SetFocus):
	* fvwm/misc.c (IsWindowOnThisPage):
	Implement and use service function IsWindowOnThisPage()

	* fvwm/events.c (HandleFocusIn):
	* fvwm/focus.c (IsLastFocusSetByMouse):
	replaced global variable lastFocusType by function
	IsLastFocusSetByMouse

	* fvwm/misc.h:
	* fvwm/builtins.c (flip_focus_func):
	(focus_func):
	(FocusOn):
	(warp_func):
	(WarpOn):
	moved focus related code and prototypes to focus.[ch]

	* fvwm/functions.c (ExecuteFunction): fixed coredump in SILENT

1999-04-18  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/builtins.c (FocusOn):
	* fvwm/events.c (HandleEnterNotify): use HAS_MOUSE_FOCUS and
	HAS_SLOPPY_FOCUS instead of !HAS_CLICK_FOCUS and !HAS_NEVER_FOCUS

1999-04-19  Bob Woodside  <proteus@pcnet.com>

	* fvwm/Makefile.am: Added vpacket.h.

1999-04-19  Hippo

	* fvwm/module.c,modconf.c Replaced M_NEW_LOOK packet with config line:
	Default_graphics

1999-04-19  Bob Woodside  <proteus@pcnet.com>

	* fvwm/module.c: New-style variable packet building logic for GSFR -
	used for the M_ADD_WINDOW/M_CONFIGURE_WINDOW packets.
	* fvwm/module.h: Ibid.

1999-04-19  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/events.c (HandleConfigureRequest):
	* fvwm/icons.c (CreateIconWindow):
	(DrawIconWindow):
	* fvwm/misc.c (LowerWindow):
	(RaiseWindow): make sure icon windows are always restacked
	below their frame.

1999-04-18  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>
