@@ -1,3 +1,7 @@
+1999-04-20  Bob Woodside  <proteus@pcnet.com>
+
+	* fvwm/AUTHORS: Who-to-blame entry for module GSFR.
+
 1999-04-20  Dominik Vogt  <dominik_vogt@gmx.de>
 
 	* fvwm/icons.c (DeIconify):
